--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>TESTTESTTESTNEu</h1>
-    <img src="https://github.com/SusanneSahr/test/blob/4a549e31473bbc616b463f9b34d6688b82a5df81/IMG-20190129-WA0002.jpg">
+    <img src="C:\Users\Susi\Downloads\IMG-20190129-WA0002.jpg">
 </body>
 </html>
