--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>TESTTESTTESTNEu</h1>
-    <img src="C:\Users\Susi\Downloads\IMG-20190129-WA0002.jpg">
+    <img src="IMG-20190129-WA0002.jpg">
 </body>
 </html>
