--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>basdfsadfs</h1>
-    <marquee direction="right" width="250">Susanne Sahr develop #LikeABosch</marquee>
+    <marquee direction="right" width="250">Susanne Sahr develop #LikeA<b>Bosch</b></marquee>
     <img src="IMG-20190129-WA0002.jpg">
 </body>
 </html>
