--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>basdfsadfs</h1>
-    <marquee direction="right" width="250">Susanne Sahr develop #LikeA<b>Bosch</b></marquee>
+    <h1> <marquee direction="right" width="1500">Susanne Sahr develop #LikeA<b>Bosch</b></marquee> </h1>
+   
     <img src="IMG-20190129-WA0002.jpg">
 </body>
 </html>
