--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> <marquee direction="right" width="1500">Susanne Sahr develop #LikeA<b>Bosch</b></marquee> </h1>
+    <h1> <marquee direction="left" width="1000">Susanne Sahr develop #LikeA<b>Bosch</b></marquee> </h1>
    
     <img src="IMG-20190129-WA0002.jpg">
 </body>
