--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-image:url(IMG-20190129-WA0002.jpg)">
-   
+<body>
+    "<body ">
     <h1> <marquee direction="left" width="1000">Susanne Sahr develop #LikeA<b>Bosch</b></marquee> </h1>
    
-    
+    <img src="ascii_img3.jpg">
 </body>
 </html>
