--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    "<body ">
+    <body>
     <h1> <marquee direction="left" width="1000">Susanne Sahr develop #LikeA<b>Bosch</b></marquee> </h1>
    
     <img src="ascii_img3.jpg">
