--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <body>
-    <h1> <marquee direction="left" width="1000">Susanne Sahr develop #LikeA<b>Bosch</b></marquee> </h1>
-   
+    <h1>  </h1>
+    <marquee direction="left" width="1000">Susanne Sahr develop #LikeA<b>Bosch</b></marquee>
     <img src="ascii_img3.jpg">
 </body>
 </html>
