--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <body>
     <h1>  </h1>
     <marquee direction="left" width="1000">Susanne Sahr develop #LikeA<b>Bosch</b></marquee>
-    <img src="ascii_img3.jpg">
+    <img src="ascii_img3.jpg" width="1000">
 </body>
 </html>
