--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <body>
-    <h1>  </h1>
-    
-    <img src="ascii_img3.jpg" width="500">
-    <marquee direction="left" width="100">Susanne Sahr develop #LikeA<b>Bosch</b></marquee>
+    <div style="width: 500px;">
+        <img src="ascii_img3.jpg" width="500">
+        <marquee direction="left" width="100">Susanne Sahr develop #LikeA<b>Bosch</b></marquee>
+        <br>
+            Test TEST Test
+        </br>
+    </div>
 </body>
 </html>
