--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <div style="width: 500px;">
         <img src="ascii_img3.jpg" width="500">
         <marquee direction="left" width="500">Susanne Sahr develop #LikeA<b>Bosch</b></marquee>
-        <br>
-            Test TEST Test
-        </br>
+        marquee {
+            font-size: xx-large;
+          }
     </div>
 </body>
 </html>
