--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 <body>
     <div style="width: 500px;">
         <img src="ascii_img3.jpg" width="500">
-        <marquee direction="left" width="500">Susanne Sahr develop #LikeA<b>Bosch</b></marquee>
-        marquee {
-            font-size: xx-large;
-          }
+        <marquee style="font-size:50pt;" direction="left" width="500">Susanne Sahr develop #LikeA<b>Bosch</b></marquee>
+        
     </div>
 </body>
 </html>
