--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div style="width: 600px;">
         <img src="ascii_img3.jpg" width="600">
-        <marquee style="font-size:30pt;" direction="left" width="600">Susanne Sahr develop #LikeA<b>Bosch</b></marquee>
+        <marquee style="font-size:30pt;" direction="left" width="600">Susanne Sahr develops #LikeA<b>Bosch</b></marquee>
         
     </div>
 </body>
