--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <marquee style="font-size:30pt;" direction="left" width="600">Susanne Sahr develops #LikeA<b>Bosch</b></marquee>
       </div>
 
-      <object data="ascii_text.txt" type="text/plain">
+      <object data="ascii_text.txt">
 </object>
 </body>
 </html>
