line height 1vh

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
         }
         
         pre.image {
-          line-height: 0.5vh;
+          line-height: 1vh;
         }
       </style>  
 </head>
 <body>   
-<pre class='image' lang='zxx'>                                                 .,,,,,,,,,,..                                                       
+<pre class='image' lang='zxx'>             
+                                                  .,,,,,,,,,,..                                                       
                                                 .,:++++++++++++++:.                                                     
                                               :+++++%+%%%%%%%%%%%++:,                                                   
                                             .:++++%%##%%%%%++++++++++:.                                                 
