with running text

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@ MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM%,............................
 MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM%,,.............. .....................,%MM@##@M@@##@@######@@######@#
 ++++++++++++++++++++++++++++++++++++++++++++++++++:.............     ...... ..............:++++:+++++:++:::::+++::::::++
 </pre>
+<marquee style="font-size:30pt;" direction="left" width="600">Susanne Sahr develops #LikeA<b>Bosch</b></marquee>
 </body>
 </html>                                                                                                                     
                                                                                                                         
