--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>SusanneSahr</title>
     <style>
         pre {
-          font-size: 1vh;
+          font-size: 9px; 
+          font-family: Courier New;
         }
         
         pre.image {
-          line-height: 1vh;
+          line-height: 5px;
         }
       </style>  
 </head>
